third_party/WebKit/Source/core/layout/LayoutScrollbarPart.cpp
@@ -146,11 +146,14 @@ void LayoutScrollbarPart::ComputeScrollbarWidth() {
   SetWidth(LayoutUnit(std::max(min_width, std::min(max_width, w))));
 
   // Buttons and track pieces can all have margins along the axis of the
-  // scrollbar.
-  SetMarginLeft(
-      MinimumValueForLength(Style()->MarginLeft(), LayoutUnit(visible_size)));
-  SetMarginRight(
-      MinimumValueForLength(Style()->MarginRight(), LayoutUnit(visible_size)));
+  // scrollbar. Values are rounded because scrollbar parts need to be rendered
+  // at device pixel boundaries.
+  SetMarginLeft(LayoutUnit(
+      MinimumValueForLength(Style()->MarginLeft(), LayoutUnit(visible_size))
+          .Round()));
+  SetMarginRight(LayoutUnit(
+      MinimumValueForLength(Style()->MarginRight(), LayoutUnit(visible_size))
+          .Round()));
 }
 
 void LayoutScrollbarPart::ComputeScrollbarHeight() {
@@ -174,11 +177,14 @@ void LayoutScrollbarPart::ComputeScrollbarHeight() {
   SetHeight(LayoutUnit(std::max(min_height, std::min(max_height, h))));
 
   // Buttons and track pieces can all have margins along the axis of the
-  // scrollbar.
-  SetMarginTop(
-      MinimumValueForLength(Style()->MarginTop(), LayoutUnit(visible_size)));
-  SetMarginBottom(
-      MinimumValueForLength(Style()->MarginBottom(), LayoutUnit(visible_size)));
+  // scrollbar. Values are rounded because scrollbar parts need to be rendered
+  // at device pixel boundaries.
+  SetMarginTop(LayoutUnit(
+      MinimumValueForLength(Style()->MarginTop(), LayoutUnit(visible_size))
+          .Round()));
+  SetMarginBottom(LayoutUnit(
+      MinimumValueForLength(Style()->MarginBottom(), LayoutUnit(visible_size))
+          .Round()));
 }
 
 void LayoutScrollbarPart::ComputePreferredLogicalWidths() {
